Fix spacing between contents and navigation bar on search page for desktops

--- a/wp-content/themes/neonsunset/source/scss/_containers.scss
+++ b/wp-content/themes/neonsunset/source/scss/_containers.scss
@@ -43,3 +43,7 @@ iframe {
     margin-top: $navigation-height + 2 * $space-horizontal;
   }
 }
+
+.search > #search-bar ~ main {
+  margin-top: $navigation-height + 2 * $space-horizontal + $space-vertical;
+}
